# find-oss

./: .gitignore  README.md  pyproject.toml
src/find_oss/: cli.py  github_client.py  github_tools.py  hybrid_flow.py  hybrid_ranking.py  llm_config.py  main.py  models.py  ranking.py  report.py  saved_searches.py  service.py
tests/: conftest.py  test_cli.py  test_github_client.py  test_github_tools.py  test_hybrid_flow.py  test_hybrid_ranking.py  test_llm_config.py  test_ranking.py  test_report.py  test_saved_searches.py  test_service.py
